--- a/nginx/index.html
+++ b/nginx/index.html
@@ -38,10 +38,10 @@
     <div>
         <table>
             <tr>
-                <td><a href="http://192.168.0.120/grafana">Grafan Dashboard</a></td>
+                <td><a href="https://at0m/grafana">Grafan Dashboard</a></td>
             </tr>
             <tr>
-                <td><a href="http://192.168.0.120/prometheus">Prometheus Dashboard</a></td>
+                <td><a href="https://at0m/prometheus">Prometheus Dashboard</a></td>
             </tr>
         </table>
     </div>
