--- a/nginx/index.html
+++ b/nginx/index.html
@@ -43,6 +43,9 @@
             <tr>
                 <td><a href="https://at0m/prometheus">Prometheus Dashboard</a></td>
             </tr>
+            <tr>
+                <td><a href="https://at0m/filebrowser">File Browser</a></td>
+            </tr>
         </table>
     </div>
 </article>
